# django-1-beliyaka98

./: pyproject.toml
django_1/: settings.py  urls.py
nfactorial/: urls.py  views.py
