[tool.poetry]
name = "django-1-beliyaka98"
version = "0.1.0"
description = "django first project"
authors = ["beliyaka98 <the.akniyet.second@gmail.com>"]
readme = "README.md"
packages = [{include = "django_1_beliyaka98"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
